# hireisrael-scripts

./: .gitignore  nbn_jobs_to_scrape.txt  post_jobs.py  pyproject.toml  scrape_jobs.py
main/core/: __init__.py  enums.py
main/linkatch/: __init__.py  core.py  linkatch_client.py  linkatch_settings.py  types.py  utilities.py
main/nbn/: __init__.py  nbn_scraper.py
